[workspace.package]
license = "MIT-0"
authors = [
  "2312622 - Nguyễn Đức Hoàng <2312622@dlu.edu.vn>",
  "2312635 - Trần Đình Việt Huy <2312635@dlu.edu.vn>",
  "2312675 - Hồ Quốc Long <2312675@dlu.edu.vn>",
  "2312702 - Nguyễn Bá Thiều Khôi Nguyên <2312702@dlu.edu.vn>"
]
homepage = "https://github.com/2312702-NBTKNguyen/DoAnCoSo"
repository = "https://github.com/2312702-NBTKNguyen/DoAnCoSo.git"
edition = "2021"

[workspace]
default-members = ["node", "runtime"]
members = [
  "node",
  "runtime",
  "pallets/blog-pallet",
]
resolver = "2"

[workspace.dependencies]
dacs-runtime = { path = "./runtime", default-features = false }

clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "2503.0.1", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
polkadot-omni-node-lib = { version = "0.6.1", default-features = false }


[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
