[package]
name = "dacs-node"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
dacs-runtime.workspace = true
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }
polkadot-omni-node-lib = { workspace = true, default-features = false, features = ["rococo-native"] }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"dacs-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"dacs-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"dacs-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]



