[package]
name = "blog-pallet"
version = "0.1.0"
edition = "2021"
authors = [
  "2312622 - Nguyễn Đức Hoàng <2312622@dlu.edu.vn>",
  "2312635 - Trần Đình Việt Huy <2312635@dlu.edu.vn>",
  "2312675 - Hồ Quốc Long <2312675@dlu.edu.vn>",
  "2312702 - Nguyễn Bá Thiều Khôi Nguyên <2312702@dlu.edu.vn>"
]
license = "MIT-0"
repository = "https://github.com/Norachann/DoAnCoSo.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { version = "40.2.1", default-features = false, optional = true }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.2.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
pallet-balances = { version = "41.1.1", default-features = false, features = ["std"] }
sp-io = { version = "40.0.1", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
